tests/invalid/interpolation_method_invalid.esm
{
  "esm": "0.1.0",
  "metadata": {
    "name": "ExtrapolationMethodInvalid",
    "description": "Test case: data loader with invalid regridding.extrapolation value",
    "authors": ["Test Suite"]
  },

  "data_loaders": {
    "BadInterpolation": {
      "kind": "grid",
      "source": { "url_template": "file:///data/{date:%Y%m%d}.nc" },
      "variables": {
        "T": { "file_variable": "T", "units": "K" }
      },
      "regridding": { "extrapolation": "invalid_extrapolation_method" }
    }
  },

  "models": {
    "TestModel": {
      "variables": {
        "x": { "type": "state", "units": "1", "default": 1.0 }
      },
      "equations": [
        {
          "lhs": { "op": "D", "args": ["x"], "wrt": "t" },
          "rhs": { "op": "*", "args": [-0.1, "x"] }
        }
      ]
    }
  }
}
